--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.friedforfun.contextsteering": "file:C:/data_c/Unity_Projects/ContextSteering-upm",
+    "com.friedforfun.contextsteering": "https://github.com/friedforfun/ContextSteering.git",
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.7",
